# paralyze

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  pat.txt
benchmarks/: .gitignore
benchmarks/results/: results.csv
benchmarks/scripts/: analyze_results.py  run_all_linalg.sh  run_benchmark.sh  visualize_results.py
include/analyzer/: ASTVisitor.h  ArrayAccess.h  ArrayDependencyAnalyzer.h  ConfidenceScorer.h  CrossIterationAnalyzer.h  DependencyAnalyzer.h  DependencyManager.h  FunctionCallAnalyzer.h  LoopBounds.h  LoopInfo.h  LoopMetrics.h  LoopVisitor.h  PointerAnalyzer.h  VariableInfo.h  (+3 more)
src/: ASTVisitor.cpp  ArrayDependencyAnalyzer.cpp  ConfidenceScorer.cpp  CrossIterationAnalyzer.cpp  DependencyAnalyzer.cpp  DependencyManager.cpp  FunctionCallAnalyzer.cpp  LoopVisitor.cpp  PointerAnalyzer.cpp  PragmaGenerator.cpp  PragmaLocationMapper.cpp  SourceAnnotator.cpp  main.cpp
tests/: array_dependencies.c  array_dependencies_openmp.c  dependency_ananlysis.c  funky_mix.c  funky_mix_openmp.c  matrix_mult.c  matrix_mult_openmp.c  mixed_dependencies.c  mixed_dependencies_openmp.c  nested_loop.c  nested_loop_openmp.c  new.c  pointer_dependencies.c  pointer_dependencies_openmp.c  pragma_generation.c  pragma_generation_openmp.c  quick_validation.c  quick_validation_openmp.c  run_dependency.sh  run_pragma_tests.sh  run_variable_tests.sh  scalar_dependencies.c  scalar_dependencies_openmp.c  simple_cases.c  simple_loops.c  simple_loops_openmp.c  string_processing.c  string_processing_openmp.c  test.c  test.sh  test_openmp.c  variable_patterns.c
